--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </div>
     </nav>
 
-<section id="home" style="background-image: url('pop-cat.gif');" class="hero-section">
+<section id="home" style="background-image: url('./assets/images/pop-cat.gif');" class="hero-section">
     <div class="container">
         <div class="hero-content">
             <h1 class="hero-title">您好，我是 普通人</h1>
@@ -37,7 +37,7 @@
             <h2 class="section-title">作品集</h2>
             <div class="portfolio-grid">
                 <div class="portfolio-item">
-                    <img src="ezgif-4a985c185448b.gif" alt="作品1">
+                    <img src="./assets/images/ezgif-4a985c185448b.gif" alt="作品1">
                     <div class="portfolio-overlay">
                         <h3>電商網站設計</h3>
                         <p>使用 React 開發的現代電商平台</p>
@@ -52,7 +52,7 @@
         <div class="container">
             <h2 class="section-title">關於我</h2>
             <div class="about-content">
-                <img src="KwvwFs.gif" alt="個人照片" class="KwvwFs.gif">
+                <img src="./assets/images/KwvwFs.gif" alt="個人照片" class="KwvwFs.gif">
                 <div>
                     <p>我是一個擁有人類正常基本生體功能的普通人，專注於學習。我的目標是過著超級平凡的生活。</p>
                     <br>
@@ -90,7 +90,7 @@
             <h2 class="section-title">最新文章</h2>
             <div class="blog-grid">
                 <article class="blog-card">
-                    <img src="WkyI7iEWNypaPH52w2tk_200x200.png" alt="文章1" class="blog-image">
+                    <img src="./assets/images/WkyI7iEWNypaPH52w2tk_200x200.png" alt="文章1" class="blog-image">
                     <div class="blog-content">
                         <span class="blog-date">2024-02-06</span>
                         <h3>React 18 新特性解析</h3>
